--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,10 @@
   }
 }
 */
+
+.App{
+  margin: 0;
+  width: 100%;
+  min-height: 100vh;
+   background-image: linear-gradient(#003300, #00b300);
+}
